# Heliox-OS

./: .gitignore  AGENT_DEVELOPMENT_GUIDE.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
daemon/: pyproject.toml
daemon/pilot/: actions.py  config.py  server.py
daemon/pilot/agents/: base_agent.py  executor.py  orchestrator.py  plan_differ.py  planner.py  registry.py
daemon/pilot/memory/: sliding_window.py
daemon/pilot/models/: budget_tracker.py  cache.py  router.py
daemon/pilot/plugins/: __init__.py  wasm_runtime.py
daemon/pilot/system/: daemon_manager.py  vision.py
daemon/pilot/testing/: __init__.py  replay.py
daemon/tests/: conftest.py  test_budget_tracker.py  test_deterministic_replay.py  test_directory_summary.py  test_email_agent_mocked.py  test_plan_differ.py  test_plugin_signatures.py  test_utils.py  test_wasm_plugin.py
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-app/ui/: package-lock.json  package.json
tauri-app/ui/src/: App.svelte
tauri-app/ui/src/lib/components/: CommandInput.svelte  ConfirmDialog.svelte  GestureControl.svelte  ReActPipeline.svelte  VirtualList.svelte
tauri-app/ui/tests/visual/: agent-thoughts.spec.ts  chat.spec.ts  helpers.ts
