[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pilot-daemon"
version = "0.7.1"
description = "AI-powered autonomous computer agent — full system control"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "websockets>=13.0",
    "pydantic>=2.6",
    "aiofiles>=24.1",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.12'",
    "tomli-w>=1.0",
    "cryptography>=43.0",
    "keyring>=25.0",
    "psutil>=5.9",
    "tribev2 @ git+https://github.com/facebookresearch/tribev2.git",
]

[project.optional-dependencies]
full = [
    "chromadb>=0.5",
    "pyperclip>=1.8",
    "SecretStorage>=3.3; sys_platform == 'linux'",
    "zeroconf>=0.131",
]
llamacpp = ["llama-cpp-python>=0.3", "pynvml>=11.5"]

# Tier 1: Game Changers
automation = [
    "pyautogui>=0.9",
    "Pillow>=10.0",
    "pyperclip>=1.8",
]
vision = [
    "easyocr>=1.7",
    "Pillow>=10.0",
]
browser = [
    "playwright>=1.40",
]
pty = [
    "ptyprocess>=0.7; sys_platform != 'win32'",
]

# LAN mesh networking
network = [
    "zeroconf>=0.131",
]

# Remote execution
ssh = [
    "paramiko>=3.4",
]

# WASM plugin sandbox
wasm = [
    "wasmtime>=18.0",
]

# Tier 2: Multipliers
documents = [
    "pypdf>=4.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
]

# Cognitive intelligence (TRIBE v2)
cognitive = [
    "tribev2 @ git+https://github.com/facebookresearch/tribev2.git",
]

# Everything
all = [
    "pilot-daemon[full,automation,vision,browser,documents,cognitive,ssh,network,wasm]",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[project.scripts]
pilot-daemon = "pilot.server:main"

[tool.hatch.build.targets.wheel]
packages = ["pilot"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
